Fixed branding's CSS overlapping radio buttons

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -133,6 +133,7 @@
   }
 
   .branding {
+    float: left;
     margin-top: 13px;
     margin-left: -15px;
     font-size: 11px !important;
